# ai-voice-service

./: .gitattributes  .gitignore  AUTH_DOCUMENTATION.md  Dockerfile  FIRST_COMMIT_GUIDE.md  README.md  env.example  main.py  pyproject.toml
api/: __init__.py  dependencies.py
api/routers/: __init__.py  agents.py  auth.py  health.py  rooms.py  tokens.py
database/: __init__.py  connection.py  models.py  repositories.py
models/: __init__.py  agent_models.py  api_response.py  auth_models.py  auth_request.py  room_models.py  token_models.py
services/: __init__.py  auth_service.py  room_service.py
